FIX: gap in welcome buyer home seccion

--- a/main.css
+++ b/main.css
@@ -11271,6 +11271,7 @@ img.calendarIcon {
         font-size: 13px !important;
         color: var(--color-gray) !important;
         text-align: center !important;
+        gap: 5px;
     }
 
     .dashboard #chartSelectorContainer {
